k8s/base/elasticsearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
  namespace: os-container-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
      name: elasticsearch
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.16.0
          name: elasticsearch
          ports:
            - containerPort: 9200
          resources:
            limits:
              cpu: '0.5'
              memory: '512Mi'
            requests:
              cpu: '0.25'
              memory: '256Mi'
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
  namespace: os-container-project
spec:
  ports:
    - name: http
      port: 9200
      protocol: TCP
      targetPort: 9200
  selector:
    app: elasticsearch
  type: ClusterIP
