k8s/base/webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
  name: webserver
  namespace: os-container-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
      name: webserver
    spec:
      containers:
        - image: os-container-project
          name: webserver
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: '100m'
              memory: '100Mi'
            requests:
              cpu: '100m'
              memory: '100Mi'
          securityContext:
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver
  namespace: os-container-project
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: webserver
  type: NodePort
